/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2013-06-23 21:50 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source/tip/sendmail.prg
    ! fixed wrong variable name

2013-06-23 01:30 UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  * source/tip/mail.prg
  * source/tip/sendmail.prg
  * contrib/tipssl/mail.prg
  * contrib/tipssl/sendmail.prg
   ! added new mime types to list of encoding

2013-06-21 12:57 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
  * source/pp/ppgen.c
    * Unused variables warning
    
2013-06-20 12:26 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
  * source/compiler/comptool.c
    * Commented an #ifndef __HB_COMPILER__ (I am not yet sure about this :-)
  * source/pp/ppgen.c
    + Added missing definitions for hb_xgrabEx(), hb_xreallocEx() and hb_xfreeEx()
  + xcode
  + xcode/xHarbour.xcodeproj
    * Initial attempt in building from SVN with unmodified Xcode 4.6, and no additional tools, using a native project
      So far it does build ppgen, and the compiler (using yacc).
      /* 
          WARNING: Make sure to connect the Xcode SVN to a local folder which dos NOT have Spaces in its name
          because I did not yet find away to stringify arguments to ppgen without stringifying the switch too.
          on first look, the stringifying of $(MACROS) in an external build phase appears buggy :-(
       */
      I am very new to Xcode, and this is really just an experiment at this time, so any help and direction
      will be appreciated. :-)
      
2013-06-17 13:50 UTC+0200 Saulius Zrelskis <labitas/AT/gmail/com>
  * source/tip/client.prg
  * source/tip/ftpcln.prg
  * source/tip/httpcln.prg
  * source/tip/mail.prg
  * source/tip/popcln.prg
  * source/tip/smtpcln.prg
  * source/tip/url.prg
    ! more code clean-ups and formatting
