@@ -8,6 +8,11 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2013-07-05 13:10 UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
+  * xharbour.spec
+   bin/pack_src.sh
+    ! fixes to build libmisc.a 
+    
 2013-06-23 21:50 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
   * source/tip/sendmail.prg
     ! fixed wrong variable name
